# kairosdb-client

./: .gitignore  ChangeLog.md  LICENSE  README.md  default.nix  kairosdb-client.cabal  kairosdb-client.nix
specs/Database/: KairosDBSpec.hs
specs/Database/KairosDB/Internal/: QueryMetricsSpec.hs  TimeSpec.hs  TypesSpec.hs
src/Database/: KairosDB.hs
src/Database/KairosDB/Internal/: Config.hs  DataPoints.hs  QueryMetrics.hs  Time.hs  Types.hs
