name:                kairosdb-client
version:             0.1.0.0
synopsis:            KairosDB client for Haskell
description:         Client for the REST API of KairosDB
license:             BSD3
license-file:        LICENSE
author:              Thomas Bach <hacking@babibo.de>
maintainer:          Thomas Bach <hacking@babibo.de>
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==8.4.4

library
  build-depends:       base >=4.11 && <4.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Database.KairosDB

test-suite specs
  type:                exitcode-stdio-1.0
  main-is:             Specs.hs
  ghc-options:         -Wall -Werror
  build-depends:       kairosdb-client
                     , base
                     , hspec          >=2.5  && <2.6
                     , hspec-discover >=2.5  && <2.6
  hs-source-dirs:      specs
  default-language:    Haskell2010
