name:                kairosdb-client
version:             0.1.0.0
synopsis:            KairosDB client for Haskell
description:         Client for the REST API of KairosDB
license:             BSD3
license-file:        LICENSE
author:              Thomas Bach <hacking@babibo.de>
maintainer:          Thomas Bach <hacking@babibo.de>
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==8.4.4

library
  build-depends:       aeson      >=1.3  && <1.4
                     , base       >=4.11 && <4.12
                     , bytestring >=0.10 && <0.11
                     , containers >=0.5  && <0.6
                     , scientific >=0.3  && <0.4
                     , text       >=1.2  && <1.3
                     , time       >=1.8  && <1.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Database.KairosDB
                     , Database.KairosDB.Internal.Types

test-suite specs
  type:                exitcode-stdio-1.0
  main-is:             Specs.hs
  ghc-options:         -Wall -Werror -Wno-missing-home-modules
  build-depends:       kairosdb-client
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , time
                     , hspec          >=2.5  && <2.6
                     , hspec-discover >=2.5  && <2.6
  hs-source-dirs:      specs
  default-language:    Haskell2010
